fix some navBar details (add default logo + menu item not wrapping)

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -54,6 +54,7 @@
   color: #505050;
   text-decoration: none;
   font-weight: bold;
+  white-space: nowrap;
   position: relative;
   display: inline-block;
   padding-bottom: 4px;
